--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Required Files Css -->
-  <link rel="stylesheet" href="/assest/css/main.css">
+  <link rel="stylesheet" href="./assest/css/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css" />
   <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
