--- a/assest/pages/homepage_first_slider.html
+++ b/assest/pages/homepage_first_slider.html
@@ -62,4 +62,4 @@
 </html>
 
 <link rel="stylesheet" href="../css/main.css">
-<script src="../js/homepage_first_slider.js"></script>
+<!-- <script src="../js/homepage_first_slider.js"></script> -->
