--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </svg>
             English
           </li>
-          <li class="col-auto d-none d-lg-block">₹ INR</li>
+     
           <li class="col-auto">Become a Seller</li>
         </ul>
         <a href="#" class="d-none d-sm-block text-white col-auto my-auto text-end fs-6 fw-semibold">Sign In</a>
@@ -395,7 +395,7 @@
           </li>
           <li class="p-2">
             <a href="#">
-              ₹ INR
+              RS PKR
             </a>
           </li>
         </ul>
