--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
           </li>
           <li class="p-2">
             <a href="#">
-              RS PKR
+              PKR
             </a>
           </li>
         </ul>
